# hydra-idp-ldap

./: .gitignore  .gitlab-ci.yml  CODE_OF_CONDUCT.md  Cargo.toml  Dockerfile  README.md
assets/scss/: _content.scss  _fonts.scss  _mixins.scss  _variables.scss  main.scss
assets/static/css/: main.min.css  main.min.css.map
assets/templates/: 404.tera  500.tera  base.tera  error.tera  login.tera  post-logout.tera
src/: ldap.rs  logger.rs  main.rs  parse.rs  web.rs
src/web/: health.rs
