[package]
name = "hydra-idp-ldap"
version = "0.1.0"
authors = ["Johan Fleury <jfleury@arcaik.net>"]
edition = "2018"

[dependencies]
anyhow = "1.0"
chrono = "0.4"
hydra-client = "0.4"
ldap3 = "0.7"
log = "0.4"
rocket = { version = "0.4.5", features = ["tls"] }
rocket_contrib = { version = "0.4.5", features = ["tera_templates"] }
serde_json = "1.0"
structopt = "0.3"
thiserror = "1.0"
url = "2.1"

[build-dependencies]
sass-rs = "0.2"
